--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Update data
-      run: |
-        python scripts/download_data.py
+#    - name: Update data
+#      run: |
+#        python scripts/download_data.py
 
-    - name: Preprocess data
-      run: |
-        python scripts/preprocess.py
+#    - name: Preprocess data
+#      run: |
+#        python scripts/preprocess.py
 
     - name: Train model
       run: |
