--- a/.github/workflows/train_model.yml
+++ b/.github/workflows/train_model.yml
@@ -1,11 +1,11 @@
-name: Update Data, Preprocess, and Train Model
+name: Retrain Model
 
 on:
   schedule:
-    - cron: '0 1 */15 * *' # Runs at 01:00, every 15 days.
+    - cron: '0 3 */15 * *' # Runs at 03:00, every 15 days.
     
 jobs:
-  update_preprocess_train:
+  train_model:
     runs-on: ubuntu-latest
 
     permissions:
@@ -24,14 +24,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    - name: Update data
-      run: |
-        python scripts/download_data.py
-
-    - name: Preprocess data
-      run: |
-        python scripts/preprocess.py
 
     - name: Train model
       run: |
