--- a/.github/workflows/data_refresh.yml
+++ b/.github/workflows/data_refresh.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pandas==2.2.2
+        pip install requests==2.32.3
 
     - name: Download data
       run: |
