--- a/.github/workflows/data_refresh.yml
+++ b/.github/workflows/data_refresh.yml
@@ -19,11 +19,20 @@ jobs:
       with:
         python-version: '3.10.14'
 
+    - name: Cache dependencies
+      id: cache-deps
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Install dependencies
+      if: steps.cache-deps.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
-        pip install pandas==2.2.2
-        pip install requests==2.32.3
+        pip install -r requirements.txt
 
     - name: Download data
       run: |
@@ -44,10 +53,11 @@ jobs:
       with:
         python-version: '3.10.14'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    - name: Restore pip cache
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
 
     - name: Preprocess data
       run: |
